[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/roboto_mono_36.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/GUI.gd" type="Script" id=2]
[ext_resource path="res://assets/Audio/Healthlose.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.611765, 0.211765, 0.211765, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.0862745, 0.0862745, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.427451, 0.698039, 0.847059, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 924.0
margin_bottom = 82.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 86.0
margin_right = 924.0
margin_bottom = 414.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 418.0
margin_right = 924.0
margin_bottom = 500.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HealthSection" type="CenterContainer" parent="MarginContainer/Rows/BottomRow"]
margin_right = 200.0
margin_bottom = 82.0
mouse_filter = 2

[node name="health_bar" type="ProgressBar" parent="MarginContainer/Rows/BottomRow/HealthSection"]
modulate = Color( 0.47451, 0.270588, 0.270588, 1 )
margin_top = 26.0
margin_right = 200.0
margin_bottom = 56.0
rect_min_size = Vector2( 200, 30 )
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="HealthTween" type="Tween" parent="MarginContainer/Rows/BottomRow/HealthSection"]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
margin_left = 204.0
margin_right = 752.0
margin_bottom = 82.0
size_flags_horizontal = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Rows/BottomRow/HBoxContainer"]
margin_right = 548.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="bullet_time" type="ProgressBar" parent="MarginContainer/Rows/BottomRow/HBoxContainer/CenterContainer"]
modulate = Color( 0.47451, 0.270588, 0.270588, 1 )
margin_left = 174.0
margin_top = 26.0
margin_right = 374.0
margin_bottom = 56.0
rect_min_size = Vector2( 200, 30 )
mouse_filter = 2
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="bullet_tween" type="Tween" parent="MarginContainer/Rows/BottomRow/HBoxContainer/CenterContainer"]

[node name="AmmoSection" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
margin_left = 756.0
margin_right = 924.0
margin_bottom = 82.0
mouse_filter = 2

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_top = 4.0
margin_right = 32.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 1 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmorSeparator" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 36.0
margin_top = 4.0
margin_right = 132.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 1 )
text = " / "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 136.0
margin_top = 4.0
margin_right = 168.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 1 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 1.5
